--- a/.env
+++ b/.env
@@ -36,12 +36,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=SMTP
-MAIL_HOST=mail.hakunamatatas.net
+MAIL_HOST=mail.pasah.net
 MAIL_PORT=465
-MAIL_USERNAME=info@hakunamatatas.net
+MAIL_USERNAME=info@pasah.net
 MAIL_PASSWORD=pasah12345!
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=info@hakunamatatas.net
+MAIL_FROM_ADDRESS=info@pasah.net
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
